--- a/src/components/AppLayout/AppLayout.scss
+++ b/src/components/AppLayout/AppLayout.scss
@@ -2,10 +2,15 @@
 @use "../../styles/partials/mixins" as *;
 
 .app-layout {
+  display: flex;
+  flex-direction: column;
   min-height: 100vh;
   background-color: $background-color;
 
   &__header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     padding: $spacing-unit * 2;
     background-color: white;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -18,8 +23,25 @@
   }
 
   &__main {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
     max-width: 1200px;
     margin: 0 auto;
     padding: $spacing-unit * 2;
+    box-sizing: border-box;
+  }
+}
+
+@media (max-width: 768px) {
+  .app-layout {
+    &__header {
+      padding: $spacing-unit;
+    }
+
+    &__main {
+      padding: $spacing-unit;
+    }
   }
 }
