--- a/src/components/MarketingSection/MarketingSection.scss
+++ b/src/components/MarketingSection/MarketingSection.scss
@@ -165,4 +165,77 @@
       background-color: $primary-color;
     }
   }
+
+  &__element-container {
+    margin-bottom: $spacing-unit * 2;
+  }
+
+  &__examples {
+    margin-top: $spacing-unit;
+    padding: $spacing-unit;
+    background-color: lighten($secondary-color, 38%);
+    border-radius: $border-radius;
+  }
+
+  &__examples-title {
+    font-size: 0.875rem;
+    color: $text-color;
+    margin-bottom: $spacing-unit;
+  }
+
+  &__examples-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+    gap: $spacing-unit;
+  }
+
+  &__example-item {
+    background-color: white;
+    border-radius: $border-radius;
+    overflow: hidden;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+  }
+
+  &__example-image {
+    width: 100%;
+    height: auto;
+    display: block;
+  }
+
+  &__example-text {
+    padding: $spacing-unit;
+    font-size: 0.875rem;
+    color: $text-color;
+    text-align: center;
+    min-height: 60px;
+    @include flex-center;
+  }
+
+  &__example-ad {
+    display: flex;
+    flex-direction: column;
+
+    &-image {
+      width: 100%;
+      height: auto;
+      display: block;
+    }
+
+    &-content {
+      padding: $spacing-unit;
+
+      h6 {
+        font-size: 0.875rem;
+        font-weight: 500;
+        margin-bottom: $spacing-unit * 0.5;
+        color: $text-color;
+      }
+
+      p {
+        font-size: 0.75rem;
+        color: lighten($text-color, 20%);
+        line-height: 1.4;
+      }
+    }
+  }
 }
