--- a/src/pages/Finalresults/Finalresults.scss
+++ b/src/pages/Finalresults/Finalresults.scss
@@ -13,22 +13,48 @@
 
 .button-list {
   display: flex;
-}
+  gap: 24px;
+  &__button {
+    @include button-base;
+    background-color: $primary-color;
+    border: 1px solid $secondary-color;
+    color: #ffffff;
 
+    &--active {
+      background-color: $secondary-color;
+      color: white;
+    }
+    &:hover {
+      background-color: $secondary-color;
+      color: white;
+    }
+  }
+}
+.text {
+  background-color: $background-color;
+  border-radius: $border-radius;
+}
 li {
   list-style-type: none;
 }
 
-h2 {
-  margin: 0;
+h3 {
+  margin: 0px;
 }
 
 p {
-  margin: 0;
+  margin: 0px;
 }
-
-.text-container {
+.text {
   display: flex;
   flex-direction: column;
-  margin-left: 100px;
+  margin: auto;
+  width: 50%;
+}
+.text-container {
+  margin: 20px;
+}
+
+button {
+  outline: none;
 }
